--- a/templates/problemlisttemplate.html
+++ b/templates/problemlisttemplate.html
@@ -1,3 +1,9 @@
+	<ul>
+		<a href='#/problems/Rookie'><li>Electrical Circuitry</li></a>
+		<a href='#/problems/Apprentice'><li>Airflow</li></a>
+		<a href='#/problems/Journeyman'><li>Refrigeration</li></a>
+	</ul>
+	
 
 	<ul>
 		<a href='#/problems/Rookie'><li>Rookie</li></a>
