--- a/public/css/index.css
+++ b/public/css/index.css
@@ -77,7 +77,7 @@
 	width:100%;
 	/*height:300px;*/
 	/*background-color: #CCB8FF;*/
-	background-color: #3000AD;
+	background-color: rgba(1, 0, 69, 0.78);
 	/*background-color: #5935B6;*/
 	border-top: 8px solid rgba(198, 247, 255, 0.74);
 	/*border-top: 8px solid #CCB8FF;*/
@@ -120,6 +120,6 @@
 #bottom_wrapper {
 	width:100%;
 	height:400px;
-	background-color: #010045;
+	background-color: rgba(21, 2, 70, 0.56);
 	float:left;
 }
