--- a/templates/problemlisttemplate.html
+++ b/templates/problemlisttemplate.html
@@ -1,13 +1,16 @@
-	<ul>
+<div>
+	Choose classroom:
+	<ul id='classroom_list'>
 		<a href='#/problems/Rookie'><li>Electrical Circuitry</li></a>
 		<a href='#/problems/Apprentice'><li>Airflow</li></a>
 		<a href='#/problems/Journeyman'><li>Refrigeration</li></a>
 	</ul>
 	
 
-	<ul>
-		<a href='#/problems/Rookie'><li>Rookie</li></a>
-		<a href='#/problems/Apprentice'><li>Apprentice</li></a>
-		<a href='#/problems/Journeyman'><li>Journeyman</li></a>
-		<a href='#/problems/All'><li>All</li></a>
+	<ul id='level_list'>
+		<li data-level='Rookie'>Rookie</li>
+		<li data-level='Apprentice'>Apprentice</li>
+		<li data-level='Journeyman'>Journeyman</li>
+		<li data-level='All'>All</li>
 	</ul>
+</div>
