--- a/templates/problemlisttemplate.html
+++ b/templates/problemlisttemplate.html
@@ -1,9 +1,10 @@
 <div>
 	Choose classroom:
+	<span id='current_classroom'>Electrical Circuitry</span>
 	<ul id='classroom_list'>
-		<a href='#/problems/Rookie'><li>Electrical Circuitry</li></a>
-		<a href='#/problems/Apprentice'><li>Airflow</li></a>
-		<a href='#/problems/Journeyman'><li>Refrigeration</li></a>
+		<li data-classroomid='52a7920eea1d6fce2f0001b6'>Electrical Circuitry</li>
+		<li data-classroomid='52ae8b31f44eeac2d20001d8'>Airflow</li>
+		<li data-classroomid='52ae8b790b85ba0805000259'>Refrigeration</li>
 	</ul>
 	
 
