styled the problem list page

--- a/templates/problemlisttemplate.html
+++ b/templates/problemlisttemplate.html
@@ -1,17 +1,22 @@
 <div>
-	Choose classroom:
-	<span id='current_classroom'>Electrical Circuitry</span>
-	<ul id='classroom_list'>
-		<li data-classroomid='52a7920eea1d6fce2f0001b6'>Electrical Circuitry</li>
-		<li data-classroomid='52ae8b31f44eeac2d20001d8'>Airflow</li>
-		<li data-classroomid='52ae8b790b85ba0805000259'>Refrigeration</li>
-	</ul>
-	
+	<div id='problem_nav_level'>
+		<ul id='level_list'>
+			<li data-level='All'>All</li>
+			<li data-level='Rookie'>Rookie</li>
+			<li data-level='Apprentice'>Apprentice</li>
+			<li data-level='Journeyman'>Journeyman</li>
+		</ul>
+	</div>
 
-	<ul id='level_list'>
-		<li data-level='Rookie'>Rookie</li>
-		<li data-level='Apprentice'>Apprentice</li>
-		<li data-level='Journeyman'>Journeyman</li>
-		<li data-level='All'>All</li>
-	</ul>
+
+
+	<div id='problem_subnav'>
+		Choose classroom:
+		<ul id='classroom_list'>
+			<li class='active-problem-nav' data-classroomid='52a7920eea1d6fce2f0001b6'>Electrical Circuitry</li>
+			<li data-classroomid='52ae8b31f44eeac2d20001d8'>Airflow</li>
+			<li data-classroomid='52ae8b790b85ba0805000259'>Refrigeration</li>
+		</ul>
+	</div>	
+
 </div>
