--- a/public/css/main.css
+++ b/public/css/main.css
@@ -485,6 +485,33 @@ body {
 }
 
 
+#problem_nav_level {
+	float:left;
+	width:960px;
+}
+
+.active-problem-nav {
+	/*background: -moz-linear-gradient(top,  rgba(211,218,255,0) 0%, rgba(204,213,255,0.8) 18%, rgba(247,247,247,0.26) 31%, rgba(247,247,247,0.26) 72%, rgba(204,213,255,0.8) 87%, rgba(211,218,255,0) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(211,218,255,0)), color-stop(18%,rgba(204,213,255,0.8)), color-stop(31%,rgba(247,247,247,0.26)), color-stop(72%,rgba(247,247,247,0.26)), color-stop(87%,rgba(204,213,255,0.8)), color-stop(100%,rgba(211,218,255,0)));
+	background: -webkit-linear-gradient(top,  rgba(211,218,255,0) 0%,rgba(204,213,255,0.8) 18%,rgba(247,247,247,0.26) 31%,rgba(247,247,247,0.26) 72%,rgba(204,213,255,0.8) 87%,rgba(211,218,255,0) 100%);
+	background: -o-linear-gradient(top,  rgba(211,218,255,0) 0%,rgba(204,213,255,0.8) 18%,rgba(247,247,247,0.26) 31%,rgba(247,247,247,0.26) 72%,rgba(204,213,255,0.8) 87%,rgba(211,218,255,0) 100%);
+	background: -ms-linear-gradient(top,  rgba(211,218,255,0) 0%,rgba(204,213,255,0.8) 18%,rgba(247,247,247,0.26) 31%,rgba(247,247,247,0.26) 72%,rgba(204,213,255,0.8) 87%,rgba(211,218,255,0) 100%);
+	background: linear-gradient(to bottom,  rgba(211,218,255,0) 0%,rgba(204,213,255,0.8) 18%,rgba(247,247,247,0.26) 31%,rgba(247,247,247,0.26) 72%,rgba(204,213,255,0.8) 87%,rgba(211,218,255,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00d3daff', endColorstr='#00d3daff',GradientType=0 );
+	*/
+
+	background: -moz-linear-gradient(top,  rgba(211,218,255,0) 0%, rgba(255,216,216,0.8) 51%, rgba(211,218,255,0) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(211,218,255,0)), color-stop(51%,rgba(255,216,216,0.8)), color-stop(100%,rgba(211,218,255,0)));
+	background: -webkit-linear-gradient(top,  rgba(211,218,255,0) 0%,rgba(255,216,216,0.8) 51%,rgba(211,218,255,0) 100%);
+	background: -o-linear-gradient(top,  rgba(211,218,255,0) 0%,rgba(255,216,216,0.8) 51%,rgba(211,218,255,0) 100%);
+	background: -ms-linear-gradient(top,  rgba(211,218,255,0) 0%,rgba(255,216,216,0.8) 51%,rgba(211,218,255,0) 100%);
+	background: linear-gradient(to bottom,  rgba(211,218,255,0) 0%,rgba(255,216,216,0.8) 51%,rgba(211,218,255,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00d3daff', endColorstr='#00d3daff',GradientType=0 );
+
+
+
+}
+
 .problem-container {
 	width:240px;
 	height:100px;
@@ -505,7 +532,7 @@ body {
 	width: 220px;
 	height:90px;
 	margin:5px 10px;
-	background-color: red;
+	background-color: rgb(255, 208, 208);
 }
 
 
@@ -520,16 +547,36 @@ body {
 	color:blue;
 }
 
+#problem_subnav ul {
+	margin: 0;
+	padding:0;
+}
+
 #problem_subnav li {
 	padding:15px 20px;
+	margin-bottom:15px;
 	font-size: 18px;
+	list-style:none;
+	cursor:pointer;
 }
 
 #problem_subnav li:hover {
 	background-color: red;
 }
 
+#level_list {
+	margin:10px 0 10px 240px;
+	padding:0;
+	cursor:pointer;
+}
 
+#level_list li {
+	margin: 0 20px 0 0;
+	list-style: none;
+	display: inline;
+	color:blue;
+	text-decoration: underline;
+}
 
 
 
