--- a/public/css/index.css
+++ b/public/css/index.css
@@ -73,13 +73,19 @@
 	margin:0;
 }
 
+.light-blue {
+	background-color: rgba(90,209,90,.9);
+}
+
 #mid_wrapper {
 	width:100%;
 	/*height:300px;*/
 	/*background-color: #CCB8FF;*/
-	background-color: rgba(1, 0, 69, 0.78);
+	/*background-color: rgba(90,209,90,.8);*/
+	background-color: rgba(90,209,90,.7);
+	/*background-color: rgba(1, 0, 69, 0.78);*/
 	/*background-color: #5935B6;*/
-	border-top: 8px solid rgba(198, 247, 255, 0.74);
+	border-top: 8px solid rgba(90,209,90,.7);
 	/*border-top: 8px solid #CCB8FF;*/
 	float:left;
 	/*margin: 0;*/
@@ -113,7 +119,7 @@
 	height: 0; 
 	border-left: 160px solid transparent;
 	border-right: 160px solid transparent;
-	border-top: 40px solid rgba(198, 247, 255, 0.74);
+	border-top: 40px solid rgba(90,209,90,.7);
 	margin:0 0 -50px -10px;
 }
 
