--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,9 +4,20 @@
 	border-left: 1px solid white;
 	border-right: 1px solid white;
 	float:right;
-	padding: 3px 5px;
+	/*padding: 0 5px;*/
 	margin:0;
+	/*height:30px;*/
 }
+#sign_in input {
+	width: 70px;
+	height:30px;
+	background-color: transparent;
+	border: 0;
+	font-size: 14px;
+	color: #FFFFFF;
+	cursor:pointer;
+	}
+
 
 #sign_in:hover {
 	background-color: #535CAB;
@@ -108,7 +119,6 @@
 .tagline {
 	font-size: 22px;
 	color:#150246;
-	font-family:'titleh2';
 	padding:0;
 	margin:0;
 }
@@ -129,3 +139,32 @@
 	background-color: rgba(21, 2, 70, 0.56);
 	float:left;
 }
+
+
+#signup input, #sign_in_inputs input  { 
+	/*padding: 5px;*/
+	border: solid 1px #E5E5E5;
+	outline: 0;
+	font: normal 13px/100% Verdana, Tahoma, sans-serif;
+	width: 200px;
+	background: #FFFFFF;
+	height:26px;
+	box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+	-moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+	-webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+	}
+
+input:hover, input:focus, { 
+	border-color: #C9C9C9; 
+	}
+
+.form label { 
+	margin-left: 10px; 
+	color: #999999; 
+	}
+
+/*input, textarea {
+	background: -webkit-gradient(linear, left top, left 25, from(#FFFFFF), color-stop(4%, #D8D8D8), to(#FFFFFF));
+	background: -moz-linear-gradient(top, #FFFFFF, #D8D8D8 1px, #FFFFFF 25px);
+	}*/
+
