--- a/public/css/main.css
+++ b/public/css/main.css
@@ -931,7 +931,7 @@ body {
 	margin-right:15px;
 }
 
-#report_card_holder {
+.report_card_holder {
 	margin-top:30px;
 	width:960px;
 	background-color: #C58420;
