--- a/templates/problemtemplate.html
+++ b/templates/problemtemplate.html
@@ -1,18 +1,22 @@
 	<script type="text/html" id='problem_template'>
-	<div id='shadow'></div>
-	<div id='correct'><h1>Correct!</h1></div>
-	<div id='incorrect'><h1>incorrect</h1></div>
+
 	<div class='problem-nav'>
 		<div class='relative'>
 			<span id='answer_question'>Answer Question!</span>
-		</div>	
-		
+		</div>
+
+		<div id='attempt_counter'>0</div>
+		<div id='counter_container'>Attempts: </div>
+		<div id='answer_result'></div>
 		<div id='slide_index'></div>
+
 
 	</div>
 	<div id='answer_container' class='hidden'>
 			<div id='answer_categories'></div>
 			<div id='answer_options'></div>
+
+
 		</div>
 	<div id='slide_wrapper' class='problem-wrapper'>
 		<div id='slide_container'>
@@ -21,3 +25,7 @@
 	</div>
 
 	</script>
+
+
+<!-- 				// <div id='correct'><h1>Correct!</h1></div>
+			// <div id='incorrect'><h1>incorrect</h1></div> -->
