--- a/public/css/index.css
+++ b/public/css/index.css
@@ -138,7 +138,7 @@
 	width:960px;
 	color:#150246;
 	padding:0;
-	margin:10px 0 10px 0;
+	margin:20px 0;
 	font-family: Georgia;
 	text-align: center;
 
