--- a/templates/slidetemplate.html
+++ b/templates/slidetemplate.html
@@ -1,6 +1,6 @@
 	<script type="text/html" id='slide_template'>
 	<div class='slide-nav'>
-		<div class='slide-left' data-direction='left'></div>
+		<div class='slide-left' data-direction='left'><p>&lt;&lt; Back</p></div>
 		
 		<div class='slide-right' data-direction='right'></div>
 		<div id='slide_index'></div>
